--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
 <div id="app"></div>
 <!-- <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script> -->
-<script src="/dist/build.js"></script>
+<script src="./dist/build.js"></script>
 </body>
 </html>
